<resources>
    <string name="app_name">My App Portfolio</string>
    
    <string name="action_settings">Settings</string>
    <string name="my_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="super_duo1">Football Scores App</string>
    <string name="super_duo2">Library App</string>
    <string name="build_bigger">Build it Bigger</string>
    <string name="bacon_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
</resources>
