<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="showToast"
        android:paddingBottom="16dp"
        android:text="@string/my_title" />

    <Button
        android:id="@+id/btnSpotify"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:onClick="showToast"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/btnSuperDuo1"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSpotify"
        android:onClick="showToast"
        android:text="@string/super_duo1" />

    <Button
        android:id="@+id/btnSuperduo2"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSuperDuo1"
        android:onClick="showToast"
        android:text="@string/super_duo2" />

    <Button
        android:id="@+id/btnBigger"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSuperduo2"
        android:onClick="showToast"
        android:text="@string/build_bigger" />

    <Button
        android:id="@+id/btnXyzReader"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBigger"
        android:onClick="showToast"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/btnCapstone"
        style="@style/ButtonStyle"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnXyzReader"
        android:onClick="showToast"
        android:text="@string/capstone" />

</RelativeLayout>
